--- a/MyHomapage.html
+++ b/MyHomapage.html
@@ -4,23 +4,27 @@
   <title>My Homepage </title>
 </head>
 
-<div id="body">
+<div id="top">
   <body>
     <h1 id="top"><a href="#top">My Homepage</a><sub><i>by SeongMun</i></sub></h1>
-    <a href="#middle">Studying subject</a>
-    <a href="#bottom">Schedule</a>
-    <br>
     <img src="icon.jpg" alt="No image"width="100" height="80">
+    <audio src="Twilight.mp3"controls></audio><br>
+    <a href="#subject">Studying subject</a>
+    <a href="#schedule">Schedule</a><br>
     <p>One personwho is studying hard, dreaming of <strong>a computer programmer</strong>.</p>
+</div>
 
-  <h2 id="middle">Subject you are currently studying</h2>
+<div id "middle">
+  <h2 id="subject">Subject you are currently studying</h2>
   <ul>
     <li>C language</li>
     <li>JAVA language</li>
     <li>Web programming <a href="https://atom.io/"target="_blank">atom</a></li>
   </ul>
+</div>
 
-  <h2 id="bottom">TImetable for this semester</h2>
+<div id "bottom">
+  <h2 id="scedule">TImetable for this semester</h2>
     <table border=5>
       <caption>schedule</caption>
     <tr>
@@ -43,4 +47,5 @@
     <h3 id="top"><a href="#top">top</a></h2>
   </body>
 </div>
+
 </html>
