--- a/MyHomapage.html
+++ b/MyHomapage.html
@@ -4,13 +4,17 @@
   <title>My Homepage </title>
 </head>
 
-<div id="top">
-  <body>
+<body>
+  <div id="top">
     <h1 id="top"><a href="#top">My Homepage</a><sub><i>by SeongMun</i></sub></h1>
-    <img src="icon.jpg" alt="No image"width="100" height="80">
-    <audio src="Twilight.mp3"controls></audio><br>
     <a href="#subject">Studying subject</a>
     <a href="#schedule">Schedule</a><br>
+    <img src="icon.jpg" alt="No image"width="100" height="80">
+    <p>My favorite guiter song</p>
+    <audio src="Twilight.mp3"controls></audio><br>
+    <p>Interesting movie</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ICdksJhouxA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
     <p>One personwho is studying hard, dreaming of <strong>a computer programmer</strong>.</p>
 </div>
 
@@ -45,7 +49,7 @@
     </tr>
   </table>
     <h3 id="top"><a href="#top">top</a></h2>
-  </body>
-</div>
-
+      <a href="who.html"target="_blank">Who are you?</a>
+    </div>
+</body>
 </html>
