--- a/who.html
+++ b/who.html
@@ -4,22 +4,33 @@
     <title>Who are you?</title>
   </head>
   <body>
-    <label>Name :</label><br>
-    <input type="text" autofocus required><br>
-    <label>Student num :</label><br>
-    <input type="text" required><br>
-    <label>e-mail :</label><br>
-    <input type="email"><br>
-    <br>
-    <label>School :</label><br>
-    <input type="text" placeholder="Chungbuk National University" readonly><br>
-    <label>Department :</label><br>
-    <input type="text"><br>
-    <label>Entered Date :</label><br>
-    <input type="date" name="" value=""><br>
+    <form>
+      <label>Name :</label><br>
+      <input type="text" autofocus required><br>
+      <label>Student num :</label><br>
+      <input type="text" required><br>
+      <label>e-mail :</label><br>
+      <input type="email"><br>
+      <br>
+      <label>School :</label><br>
+      <input type="text" placeholder="Chungbuk National University" readonly><br>
+      <label>Department :</label><br>
+      <input type="text"><br>
+      <label>Entered Date :</label><br>
+      <input type="date" name="" value=""><br>
 
-    <br>
-    <input type="submit" value="submit">
-    <input type="reset" value="rest">
+      <p>Choose type applied to you </p>
+      <input type="checkbox">
+      <label>Dormitory</label><br>
+      <input type="checkbox">
+      <label>Commute</label><br>
+      <input type="checkbox">
+      <label>Live alone</label><br>
+
+      <br>
+      <input type="submit" value="submit">
+      <input type="reset" value="rest">
+    </form>
+
   </body>
 </html>
