change font, make background-image fill whole width

--- a/MyHomepage.html
+++ b/MyHomepage.html
@@ -6,16 +6,19 @@
 
   <style>
   html{
-    font-family: lucida console;
+    font-family: 'helvetica neue', helvetica, arial, sans-serif;
+  }
+  *{
+    color: #404040;
   }
   </style>
 </head>
 
 <body>
-  <div style="background: url(background.jpg)">
+  <div style="background: url(background.jpg); background-size: cover;">
     <br>
-    <h1 style="color:white" style="font-family: times">SeongMun Hwang</h2>
-    <h2 style="color: white" class="target">Welcome to My Homepage!</h1><br>
+    <p style="font-size:50px; color:white">SeongMun Hwang</p>
+    <h3 style="color: white" class="target">Welcome to My Homepage!</h3><br>
     <table class="basic">
       <thead>
         <tr>
@@ -28,7 +31,7 @@
     </table>
   </div>
 
-  <div id "middle" style="background-: #"><br>
+  <div id "middle" style="background-color: #BDD3F3"><br>
     <p>My favorite guiter song</p>
     <audio src="Twilight.mp3"controls></audio><br>
     <p>One personwho is studying hard, dreaming of <strong>a computer programmer</strong>.</p>
