--- a/Mypage.html
+++ b/Mypage.html
@@ -15,7 +15,7 @@
 
       <tbody>
         <tr>
-          <td rowspan="7"><img src="download.jpg" alt="No image"width="300" height="150"></td>
+          <td rowspan="7"><img src="profile.jpg" alt="No image"width="300" height="150"></td>
         </tr>
         <tr>
           <td class="style">Name</td>
