--- a/Homework_for_lecture6/Homework_for_lecture6.html
+++ b/Homework_for_lecture6/Homework_for_lecture6.html
@@ -3,6 +3,9 @@
   <head>
     <title>CSS Box Model</title>
     <style>
+    .{
+      font-family: arial;
+    }
     #header{
       color: white;
       background-color: #8CACB2;
@@ -42,6 +45,10 @@
       text-align: center;
       width: 60%;
     }
+    #nav2 img{
+      width: 200px;
+      height: 300px;
+    }
     #content{
       float:left;
       width: 100%;
@@ -50,9 +57,9 @@
     }
     #footer{
       clear: both;
-      color: white;
-      background-color: grey;
-      text-align: center;
+      color: black;
+      background-color: #8CACB2;
+      text-align: right;
     }
 
     #fixed{
@@ -106,12 +113,35 @@
         dieting leads nowher good, and that a clean lifestyle is hte tichet to feeling and
         being healthy</p>
         <img src="roots.jpg" alt="">
+        <hr width="100%" style="border:1px dotted">
+
+        <h2>Selling Boldly: Applying the New Science of Positive Psychology to Dramatically Increas
+        Your Confidence, Happiness, and Sales</h2>
+        <p>Fear us tge reasob nost salespeople don't like to pixk up the ogibs. Fear is the
+        reason we don;t ask for the business more, even though our customers want to buy from us</p>
+        <img src="selling.jpg" alt="">
+        <hr width="100%" style="border:1px dotted">
+
+        <h2>I've Got My Eyes on You (B&N Exclusive Edition)</h2>
+        <p>A new thrileer from #1 New York Times bestselling author and "Queen of Suspense"
+        Mary Higgins Clark. After a party when ehr parents are away, eightenn-year-old Kerry
+        Dowling is found fully dressed at the botton of the familty pool. The immedeiate
+        suspect is her boyfriend wiho had a bitter argument with ehr at the party. Then there
+        is a twenty-year-old neighbor who was angry because she didn't invite him to the
+        party.</p>
+        <img src="mary.jpg" alt="">
+        <hr width="100%" style="border:1px dotted">
+
       </div>
       <div id="content">
 
       </div>
       <div id="footer">
-        <p>this is foot</p>
+        <p>Barnes & Noble Booksellers, Inc., Legal Department</p>
+        <p>122 Fifth Avenue</p>
+        <p>New York, NY 10011</p>
+        <p>Fax:(212) 463-5683</p>
+        <br><br><p>Location: <a href="#">Click Map</a> </p>
       </div>
     </div>
 
