--- a/Homework_for_lecture6/Homework_for_lecture6.html
+++ b/Homework_for_lecture6/Homework_for_lecture6.html
@@ -3,7 +3,7 @@
   <head>
     <title>CSS Box Model</title>
     <style>
-    .{
+    *{
       font-family: arial;
     }
     #header{
@@ -13,33 +13,43 @@
       margin-left: 50px;
       margin-right: 50px;
     }
+
+    #header img{
+      width: 200px;
+      height: 80px;
+      margin: 20px 0px 0px 30px;
+      float: left;
+    }
+    #header p{
+      margin: 45px 0px 45px 10px;
+      font-size: 30px;
+      display: inline-block;
+    }
     #header ul{
-      background-color: white;
       color: black;
       text-decoration: none;
+      display:inline-block;
       float: right;
+      margin: 45px 100px 45px 0px;
     }
     #header ul li{
-      display: inline;
+      font-weight: bold;
       background-color: white;
-      border: solid #8CACB2;
+      border-radius: 7px;
+      display: inline-block;
+      margin:7px;
+      padding: 3px;
     }
     #header ul li:hover{
       background-color: grey;
     }
-    #header p{
-      //float: left;
-      //display: inline;
-    }
-    #header img{
-      margin: 10px;
-      float: left;
-    }
+
     #nav1{
       clear: both;
       text-align: center;
       width: 100%;
     }
+
     #nav2{
       float: left;
       text-align: center;
@@ -49,17 +59,26 @@
       width: 200px;
       height: 300px;
     }
-    #content{
-      float:left;
+    #nav2 hr{
       width: 100%;
-      background-color: pink;
-      text-align: center;
+      background-size: 10px 2px;
+      border: 2px dotted;
+      border-bottom: none;
     }
+
     #footer{
       clear: both;
       color: black;
       background-color: #8CACB2;
       text-align: right;
+    }
+    #footer p{
+      line-height: 0;
+    }
+    input[type=submit]{
+      border-style: outset;
+      border-color: lightgrey;
+      background-color:  #8CACB2;
     }
 
     #fixed{
@@ -70,7 +89,7 @@
       width: 300px;
       height: 70px;
       top: 300px;
-      left: 500px;
+      left: 70%;
     }
 
 
@@ -78,23 +97,21 @@
   </head>
   <body>
     <div class="">
-      <p id="fixed">10% OFF $35+ | 15% OFF $60+<br>*USE CODEL HAPPYAPRIL</p>
+      <p id="fixed" style="padding-top:10px;">10% OFF $35+ | 15% OFF $60+<br>*USE CODEL HAPPYAPRIL</p>
       <div id="header">
-        <img src="logo.png" alt=""><br><p>Premium bookshop</p>
+        <img src="logo.png" alt=""><p>Premium bookshop</p>
         <ul>
           <li>Home</li>
           <li>Books</li>
           <li>Gifts</li>
         </ul>
-        <br>
-        <br>
       </div>
 
       <div id="nav1">
-        <p>The best Bookstore Online</p>
-        <p>Over 6 million book ready for shipment whithin 24 hours and 4.5 miilon eBooks to download now</p>
+        <p style="padding-top:10px;padding-bottom:10px">The best Bookstore Online<br>Over 6 million book ready for shipment whithin 24 hours and 4.5 miilon eBooks to download now</p>
         <hr>
       </div>
+
       <div id="nav2">
         <h2>The President Is Missing</h2>
         <p>Please jon us in welcoming President Bill Clinton and the worlds bestselling author
@@ -102,7 +119,7 @@
         Missing. A limited number of wristbands for event access will be distrubuted
         beginning at 9am tge day of the even</p>
         <img src="clinton.jpg" alt=""><br>
-        <hr width="100%" style="border:1px dotted">
+        <hr>
 
         <h2>True Roots: A Mindful Kitchen with More Than 100
         Recipes Free of Gluten, Dairy, and Refined Sugar</h2>
@@ -113,14 +130,14 @@
         dieting leads nowher good, and that a clean lifestyle is hte tichet to feeling and
         being healthy</p>
         <img src="roots.jpg" alt="">
-        <hr width="100%" style="border:1px dotted">
+        <hr>
 
         <h2>Selling Boldly: Applying the New Science of Positive Psychology to Dramatically Increas
         Your Confidence, Happiness, and Sales</h2>
         <p>Fear us tge reasob nost salespeople don't like to pixk up the ogibs. Fear is the
         reason we don;t ask for the business more, even though our customers want to buy from us</p>
         <img src="selling.jpg" alt="">
-        <hr width="100%" style="border:1px dotted">
+        <hr>
 
         <h2>I've Got My Eyes on You (B&N Exclusive Edition)</h2>
         <p>A new thrileer from #1 New York Times bestselling author and "Queen of Suspense"
@@ -130,18 +147,23 @@
         is a twenty-year-old neighbor who was angry because she didn't invite him to the
         party.</p>
         <img src="mary.jpg" alt="">
-        <hr width="100%" style="border:1px dotted">
+        <hr>
 
+        <p>Send your feedback to us</p>
+        <form class>
+          <input type="text" name="" value="" style="width:400px;height:150px;"><br>
+          <input type="submit" name="" value="submit">
+        </form>
+        <br><hr>
       </div>
-      <div id="content">
 
-      </div>
       <div id="footer">
-        <p>Barnes & Noble Booksellers, Inc., Legal Department</p>
+        <p style="padding-top:20px;">Barnes & Noble Booksellers, Inc., Legal Department</p>
         <p>122 Fifth Avenue</p>
         <p>New York, NY 10011</p>
         <p>Fax:(212) 463-5683</p>
-        <br><br><p>Location: <a href="#">Click Map</a> </p>
+        <br><br>
+        <p style="padding-bottom:20px">Location: <a href="#">Click Map</a> </p>
       </div>
     </div>
 
