desperate css and js file, complete homework

--- a/homework_for_lecture7,8/main.html
+++ b/homework_for_lecture7,8/main.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="stylesheet" href="style.css">
         <style>
             body{
                 background-image: url(login.jpg);
@@ -11,7 +12,7 @@
     </head>
     <body>
         <h1 style="color: white;">Happy shopping</h1>
-        <div class="login">
+        <div id="login">
             <p style="color: white;">ID:</p>
             <input type="text">
             <p style="color: white;">PW:</p>
